--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 Bug's Stuff
             </h1>
             <p class="link_list" id="header_list">
-                [ <a href="index.html">Home</a> | <a href="Pages/games.html">Games</a> | <a href="Pages/cat.html">Cat</a> | <a href="Pages/notes.html">Notes</a> ]
+                [ <a href="index.html">Home</a> | <a href="games.html">Games</a> | <a href="cat.html">Cat</a> | <a href="notes.html">Notes</a> ]
             </p>
         </div>
         <div class="content">
