cat page and misc edits

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Bug's Stuff</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" href="Assets/breadbug.ico">
   </head>
   <body>
     <div class="main">
@@ -21,7 +22,7 @@
                 Hi, I'm GeneralBug and this is my cool website for my cool stuff. 
                 I'm a programmer and game developer from Australia currently building my portfolio and looking for work. 
                 I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
-                I like cats and dislike writing about myself.
+                I like cats and not writing about myself.
             </p>
             <img 
                 src="Assets/maxwell.gif" 
