--- a/cat.html
+++ b/cat.html
@@ -19,24 +19,26 @@
         </div>
         <div class="content" id="cat_gallery">
             <p> This is my cat Belle. Her droopy ear is from an old infection, she's fine now though.</p>
-
-                <img class="cat2" src="Assets/Belle/belle_04.png" alt="My cat Belle (grey cat with floppy right ear) staring at YOU">
+                <img class="cat2" src="Assets/Belle/belle_18.png" alt="My cat Belle (grey cat with floppy right ear) staring at YOU">
                 <img class="cat" src="Assets/Belle/belle_02.png" alt="Belle laying on a desk">
                 <img class="cat" src="Assets/Belle/belle_03.png" alt="Belle laying on a chair">
                 <img class="cat" src="Assets/Belle/belle_12.png" alt="Belle shaking vigorously">
                 <img class="cat" src="Assets/Belle/belle_05.png" alt="Belle standing in front of a window">
+                <img class="cat" src="Assets/Belle/belle_04.png" alt="Belle sniffing YOU">
                 <img class="cat" src="Assets/Belle/belle_14.png" alt="Belle peeking out of a box">
                 <img class="cat" src="Assets/Belle/belle_07.png" alt="Belle being cute and fluffy">
+                <img class="cat" src="Assets/Belle/belle_19.png" alt="Belle being interupted during a butt-licking">
                 <img class="cat" src="Assets/Belle/belle_09.png" alt="Belle attacking a feather toy while sitting precariously on the head of a chair">
                 <img class="cat" src="Assets/Belle/belle_10.png" alt="Belle sitting grumpily in a half eaten carboard box">
                 <img class="cat" src="Assets/Belle/belle_08.png" alt="Belle being small">
                 <img class="cat" src="Assets/Belle/belle_11.png" alt="Belle with a groggy expression (she is sleepy)">
                 <img class="cat" src="Assets/Belle/belle_01.png" alt="Belle laying on a rug">
                 <img class="cat" src="Assets/Belle/belle_13.png" alt="Belle peeking into a shopping bag (it contains cat food)">
-                <img class="cat" src="Assets/Belle/belle_16.png" alt="Belle being little">
+                <img class="cat" src="Assets/Belle/belle_20.png" alt="Belle yawning">
                 <img class="cat" src="Assets/Belle/belle_15.png" alt="Belle sleeping snuggly">
                 <img class="cat" src="Assets/Belle/belle_06.png" alt="Belle sitting around looking pretentious">
                 <img class="cat" src="Assets/Belle/belle_17.png" alt="Belle posing elegantly">
+
 
         </div>
     </div>
