added notes, minor tweaks

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Bug's Stuff</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <link rel="icon" href="Assets/breadbug.ico">
+    <link rel="icon" href="/Assets/breadbug.ico">
   </head>
   <body>
     <div class="main">
@@ -30,7 +30,7 @@
         </div>
         <div class="footer">
             <p class="link_list" id="footer_list">
-                [ <a href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> 
+                [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> 
                 | <a href="https://generalbug.itch.io/">Itch</a> 
                 | <a href="https://github.com/GeneralBug">GitHub</a> ]
             </p>
