updated to purple

--- a/cat.html
+++ b/cat.html
@@ -9,16 +9,26 @@
   </head>
   <body>
     <div class="main">
-        <div class="header">
-            <h1>
-                Bug's Stuff
-            </h1>
-            <p class="link_list" id="header_list">
-                [ <a href="index.html">Home</a> | <a href="games.html">Games</a> | <a href="cat.html">Cat</a> | <a href="notes.html">Notes</a> ]
-            </p>
+        <div class="nav">
+            <img id="breadbug"
+                    src="Assets/breadbug spin 2.gif" 
+                    alt="Digital render of a breadbug spinning">
+            <div class="paragraph">
+                <p class="link_list" id="header_list">
+                    [ <a href="index.html">Home</a> ]<br>
+                    [ <a href="games.html">Games</a> ]<br>
+                    [ <a href="cat.html">Cat</a> ]<br>
+                    [ <a href="notes.html">Notes</a> ]<br>
+                    --------------------------- <br>
+                    [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> ]<br>
+                    [ <a href="https://generalbug.itch.io/">Itch</a> ]<br>
+                    [ <a href="https://github.com/GeneralBug">GitHub</a> ]
+                </p>
+            </div>
         </div>
         <div class="content" id="cat_gallery">
-            <p> This is my cat Belle. Her droopy ear is from an old infection, she's fine now though.</p>
+            <div class="paragraph">
+                <p> This is my cat Belle. Her droopy ear is from an old infection, she's fine now though.</p>
                 <img class="cat2" src="Assets/Belle/belle_18.png" alt="My cat Belle (grey cat with floppy right ear) staring at YOU">
                 <img class="cat" src="Assets/Belle/belle_02.png" alt="Belle laying on a desk">
                 <img class="cat" src="Assets/Belle/belle_03.png" alt="Belle laying on a chair">
@@ -38,7 +48,9 @@
                 <img class="cat" src="Assets/Belle/belle_15.png" alt="Belle sleeping snuggly">
                 <img class="cat" src="Assets/Belle/belle_06.png" alt="Belle sitting around looking pretentious">
                 <img class="cat" src="Assets/Belle/belle_17.png" alt="Belle posing elegantly">
+            </div>
         </div>
+        <div class="nav_offset"></div>
     </div>
   </body>
 </html>
