--- a/notes.html
+++ b/notes.html
@@ -9,24 +9,34 @@
   </head>  
   <body>
     <div class="main">
-        <div class="header">
-            <h1>
-                Bug's Stuff
-            </h1>
-            <p class="link_list" id="header_list">
-                [ <a href="index.html">Home</a> | <a href="games.html">Games</a> | <a href="cat.html">Cat</a> | <a href="notes.html">Notes</a> ]
-            </p>
+        <div class="nav">
+            <img id="breadbug"
+                    src="Assets/breadbug spin 2.gif" 
+                    alt="Digital render of a breadbug spinning">
+            <div class="paragraph">
+                <p class="link_list" id="header_list">
+                    [ <a href="index.html">Home</a> ]<br>
+                    [ <a href="games.html">Games</a> ]<br>
+                    [ <a href="cat.html">Cat</a> ]<br>
+                    [ <a href="notes.html">Notes</a> ]<br>
+                    --------------------------- <br>
+                    [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> ]<br>
+                    [ <a href="https://generalbug.itch.io/">Itch</a> ]<br>
+                    [ <a href="https://github.com/GeneralBug">GitHub</a> ]
+                </p>
+            </div>
         </div>
         <div class="content">
-            <p class="game">
-                As an exercise intended to improve my own design abilities by analysing other games, I started writing these little "review" things when I play a game (though I don't want them to be reviews, some get more "review-y" than others). They aren't really meant for others, so some of them are very rambly and possibly incomprehensible, so read them at your own risk.
-                <br>
-                <br>
-                Also they're listed newest to oldest (based on when wrote them), noting the system I played it on and my general feelings about it (positive/negative).                
-                <br>
-                <br>
-            </p>
-            
+            <div class="paragraph">
+                <p>
+                    As an exercise intended to improve my own design abilities by analysing other games, I started writing these little "review" things when I play a game (though I don't want them to be reviews, some get more "review-y" than others). They aren't really meant for others, so some of them are very rambly and possibly incomprehensible, so read them at your own risk.
+                    <br>
+                    <br>
+                    Also they're listed newest to oldest (based on when wrote them), noting the system I played it on and my general feelings about it (positive/negative).                
+                    <br>
+                    <br>
+                </p>
+            </div>
             <button type="button" class="collapsible">
                 Viscera Cleanup Detail (PC) – Neutral            
             </button>
@@ -420,6 +430,7 @@
             </div> 
 
         </div>
+        <div class="nav_offset"></div>
     </div>
   </body>
   
