--- a/index.html
+++ b/index.html
@@ -9,32 +9,39 @@
   </head>
   <body>
     <div class="main">
-        <div class="header">
-            <h1>
-                Bug's Stuff
-            </h1>
-            <p class="link_list" id="header_list">
-                [ <a href="index.html">Home</a> | <a href="games.html">Games</a> | <a href="cat.html">Cat</a> | <a href="notes.html">Notes</a> ]
-            </p>
+        <div class="nav">
+            <img id="breadbug"
+                    src="Assets/breadbug spin 2.gif" 
+                    alt="Digital render of a breadbug spinning">
+            <div class="paragraph">
+                <p class="link_list" id="header_list">
+                    [ <a href="index.html">Home</a> ]<br>
+                    [ <a href="games.html">Games</a> ]<br>
+                    [ <a href="cat.html">Cat</a> ]<br>
+                    [ <a href="notes.html">Notes</a> ]<br>
+                    --------------------------- <br>
+                    [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> ]<br>
+                    [ <a href="https://generalbug.itch.io/">Itch</a> ]<br>
+                    [ <a href="https://github.com/GeneralBug">GitHub</a> ]
+                </p>
+            </div>
         </div>
         <div class="content">
-            <p>
-                Hi, I'm GeneralBug and this is my cool website for my cool stuff. 
-                I'm a programmer and game developer from Australia currently building my portfolio and looking for work. 
-                I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
-                I like cats and not writing about myself.
-            </p>
-            <img 
-                src="Assets/maxwell.gif" 
-                alt="Digital render of a cat spinning">
+            <div class="header">
+                <img class="breadbug2" src="Assets/breadbug spin 2 small.gif"  alt="Digital render of a breadbug spinning">
+                <img id="title"     src="Assets/wordart.png"                alt="Bug's Stuff">
+                <img class="breadbug2" src="Assets/breadbug spin 2 small.gif"  alt="Digital render of a breadbug spinning">
+            </div>
+            <div class="paragraph">
+                <p>
+                    Hi, I'm GeneralBug and this is my cool website for my cool stuff. 
+                    I'm a programmer and game developer from Australia currently building my portfolio and looking for work. 
+                    I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
+                    I like cats and not writing about myself.
+                </p>
+            </div>
         </div>
-        <div class="footer">
-            <p class="link_list" id="footer_list">
-                [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> 
-                | <a href="https://generalbug.itch.io/">Itch</a> 
-                | <a href="https://github.com/GeneralBug">GitHub</a> ]
-            </p>
-        </div>
+        <div class="nav_offset"></div>
     </div>
   </body>
 </html>
