added catppuccin palette, giant breadbug

--- a/cat.html
+++ b/cat.html
@@ -19,7 +19,7 @@
                     [ <a href="games.html">Games</a> ]<br>
                     [ <a href="cat.html">Cat</a> ]<br>
                     [ <a href="notes.html">Notes</a> ]<br>
-                    --------------------------- <br>
+                    --- <br>
                     [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> ]<br>
                     [ <a href="https://generalbug.itch.io/">Itch</a> ]<br>
                     [ <a href="https://github.com/GeneralBug">GitHub</a> ]
@@ -29,7 +29,7 @@
         <div class="content" id="cat_gallery">
             <div class="paragraph">
                 <p> This is my cat Belle. Her droopy ear is from an old infection, she's fine now though.</p>
-                <img class="cat2" src="Assets/Belle/belle_18.png" alt="My cat Belle (grey cat with floppy right ear) staring at YOU">
+                <img class="cat" src="Assets/Belle/belle_18.png" alt="My cat Belle (grey cat with floppy right ear) staring at YOU">
                 <img class="cat" src="Assets/Belle/belle_02.png" alt="Belle laying on a desk">
                 <img class="cat" src="Assets/Belle/belle_03.png" alt="Belle laying on a chair">
                 <img class="cat" src="Assets/Belle/belle_12.png" alt="Belle shaking vigorously">
