--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="/Assets/breadbug.ico">
   </head>
   <body>
+    
     <div class="main">
         <div class="nav">
             <img id="breadbug"
@@ -19,7 +20,7 @@
                     [ <a href="games.html">Games</a> ]<br>
                     [ <a href="cat.html">Cat</a> ]<br>
                     [ <a href="notes.html">Notes</a> ]<br>
-                    --------------------------- <br>
+                    --- <br>
                     [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> ]<br>
                     [ <a href="https://generalbug.itch.io/">Itch</a> ]<br>
                     [ <a href="https://github.com/GeneralBug">GitHub</a> ]
@@ -29,7 +30,7 @@
         <div class="content">
             <div class="header">
                 <img class="breadbug2" src="Assets/breadbug spin 2 small.gif"  alt="Digital render of a breadbug spinning">
-                <img id="title"     src="Assets/wordart.png"                alt="Bug's Stuff">
+                <h1>BUG'S STUFF</h1>
                 <img class="breadbug2" src="Assets/breadbug spin 2 small.gif"  alt="Digital render of a breadbug spinning">
             </div>
             <div class="paragraph">
@@ -39,6 +40,7 @@
                     I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
                     I like cats and not writing about myself.
                 </p>
+                <img id="breadbug3" src="Assets/giant breadbug spin.gif" alt="Digital render of a giant breadbug spinning">
             </div>
         </div>
         <div class="nav_offset"></div>
