added link icons, working on notes list

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     [ <a href="cat.html">Cat</a> ]<br>
                     [ <a href="notes.html">Notes</a> ]<br>
                     --- <br>
-                    [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> ]<br>
-                    [ <a href="https://generalbug.itch.io/">Itch</a> ]<br>
-                    [ <a href="https://github.com/GeneralBug">GitHub</a> ]
+                    <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
+                    <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
+                    <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a><br>
                 </p>
             </div>
         </div>
@@ -36,8 +36,9 @@
             <div class="paragraph">
                 <p>
                     Hi, I'm GeneralBug and this is my cool website for my cool stuff. 
-                    I'm a programmer and game developer from Australia currently building my portfolio and looking for work. 
+                    I'm a programmer and game developer from Australia. 
                     I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
+                    I also dabble in other areas, like game modding and art stuff.
                     I like cats and not writing about myself.
                 </p>
                 <img id="breadbug3" src="Assets/giant breadbug spin.gif" alt="Digital render of a giant breadbug spinning">
@@ -46,4 +47,8 @@
         <div class="nav_offset"></div>
     </div>
   </body>
+  
+    <!-- steam and modrinth if i put enough stuff to justify adding links
+    <a href="https://steamcommunity.com/profiles/76561198163788245/myworkshopfiles"><img class="link_icon" src="Assets/Logos/logo_steam.png" alt="Steam Workshop"></a>
+    <a href="https://modrinth.com/user/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_modrinth.png" alt="Modrinth"></a> -->
 </html>
