--- a/notes.html
+++ b/notes.html
@@ -9,7 +9,7 @@
   </head>  
   <body>
     <div class="main">
-        <div class="nav">
+                <div class="nav">
             <img id="breadbug"
                     src="Assets/breadbug spin 2.gif" 
                     alt="Digital render of a breadbug spinning">
@@ -20,9 +20,9 @@
                     [ <a href="cat.html">Cat</a> ]<br>
                     [ <a href="notes.html">Notes</a> ]<br>
                     --- <br>
-                    [ <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug">Mastodon</a> ]<br>
-                    [ <a href="https://generalbug.itch.io/">Itch</a> ]<br>
-                    [ <a href="https://github.com/GeneralBug">GitHub</a> ]
+                    <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
+                    <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
+                    <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a><br>
                 </p>
             </div>
         </div>
