redesign for full length left navigation bar

--- a/cat.html
+++ b/cat.html
@@ -8,49 +8,51 @@
     <link rel="icon" href="Assets/breadbug.ico">
   </head>
   <body>
-    <div class="main">
-                <div class="nav">
-            <img id="breadbug"
-                    src="Assets/breadbug spin 2.gif" 
-                    alt="Digital render of a breadbug spinning">
-            <div class="paragraph">
-                <p class="link_list" id="header_list">
-                    [ <a href="index.html">Home</a> ]<br>
-                    [ <a href="games.html">Games</a> ]<br>
-                    [ <a href="cat.html">Cat</a> ]<br>
-                    [ <a href="notes.html">Notes</a> ]<br>
-                    --- <br>
-                    <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
-                    <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
-                    <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a><br>
-                </p>
-            </div>
+    <div class="nav">
+        <img id="breadbug"
+                src="Assets/breadbug spin 2.gif" 
+                alt="Digital render of a breadbug spinning">
+        <div class="link_button">
+            <a href="index.html">Home</a>
         </div>
-        <div class="content" id="cat_gallery">
-            <div class="paragraph">
-                <p> This is my cat Belle. Her droopy ear is from an old infection, she's fine now though.</p>
-                <img class="cat" src="Assets/Belle/belle_18.png" alt="My cat Belle (grey cat with floppy right ear) staring at YOU">
-                <img class="cat" src="Assets/Belle/belle_02.png" alt="Belle laying on a desk">
-                <img class="cat" src="Assets/Belle/belle_03.png" alt="Belle laying on a chair">
-                <img class="cat" src="Assets/Belle/belle_12.png" alt="Belle shaking vigorously">
-                <img class="cat" src="Assets/Belle/belle_05.png" alt="Belle standing in front of a window">
-                <img class="cat" src="Assets/Belle/belle_04.png" alt="Belle sniffing YOU">
-                <img class="cat" src="Assets/Belle/belle_14.png" alt="Belle peeking out of a box">
-                <img class="cat" src="Assets/Belle/belle_07.png" alt="Belle being cute and fluffy">
-                <img class="cat" src="Assets/Belle/belle_19.png" alt="Belle being interupted during a butt-licking">
-                <img class="cat" src="Assets/Belle/belle_09.png" alt="Belle attacking a feather toy while sitting precariously on the head of a chair">
-                <img class="cat" src="Assets/Belle/belle_10.png" alt="Belle sitting grumpily in a half eaten carboard box">
-                <img class="cat" src="Assets/Belle/belle_08.png" alt="Belle being small">
-                <img class="cat" src="Assets/Belle/belle_11.png" alt="Belle with a groggy expression (she is sleepy)">
-                <img class="cat" src="Assets/Belle/belle_01.png" alt="Belle laying on a rug">
-                <img class="cat" src="Assets/Belle/belle_13.png" alt="Belle peeking into a shopping bag (it contains cat food)">
-                <img class="cat" src="Assets/Belle/belle_20.png" alt="Belle yawning">
-                <img class="cat" src="Assets/Belle/belle_15.png" alt="Belle sleeping snuggly">
-                <img class="cat" src="Assets/Belle/belle_06.png" alt="Belle sitting around looking pretentious">
-                <img class="cat" src="Assets/Belle/belle_17.png" alt="Belle posing elegantly">
-            </div>
+        <div class="link_button">
+            <a href="games.html">Games</a>
         </div>
-        <div class="nav_offset"></div>
+        <div class="link_button">
+            <a href="cat.html">Cat</a>
+        </div>
+        <div class="link_button">
+            <a href="notes.html">Notes</a>
+        </div>
+        <div class="link_button">
+            <a href="links.html">Links</a>
+        </div>
+    </div>
+    <div class="content" id="cat_gallery">
+        <div class="paragraph">
+            <p> This is my cat Belle. Her droopy ear is from an old infection, she's fine now though.</p>
+            <img class="cat" src="Assets/Belle/belle_18.png" alt="My cat Belle (grey cat with floppy right ear) staring at YOU">
+            <img class="cat" src="Assets/Belle/belle_02.png" alt="Belle laying on a desk">
+            <img class="cat" src="Assets/Belle/belle_03.png" alt="Belle laying on a chair">
+            <img class="cat" src="Assets/Belle/belle_12.png" alt="Belle shaking vigorously">
+            <img class="cat" src="Assets/Belle/belle_05.png" alt="Belle standing in front of a window">
+            <img class="cat" src="Assets/Belle/belle_04.png" alt="Belle sniffing YOU">
+            <img class="cat" src="Assets/Belle/belle_14.png" alt="Belle peeking out of a box">
+            <img class="cat" src="Assets/Belle/belle_07.png" alt="Belle being cute and fluffy">
+            <img class="cat" src="Assets/Belle/belle_19.png" alt="Belle being interupted during a butt-licking">
+            <img class="cat" src="Assets/Belle/belle_09.png" alt="Belle attacking a feather toy while sitting precariously on the head of a chair">
+            <img class="cat" src="Assets/Belle/belle_10.png" alt="Belle sitting grumpily in a half eaten carboard box">
+            <img class="cat" src="Assets/Belle/belle_08.png" alt="Belle being small">
+            <img class="cat" src="Assets/Belle/belle_11.png" alt="Belle with a groggy expression (she is sleepy)">
+            <img class="cat" src="Assets/Belle/belle_01.png" alt="Belle laying on a rug">
+            <img class="cat" src="Assets/Belle/belle_13.png" alt="Belle peeking into a shopping bag (it contains cat food)">
+            <img class="cat" src="Assets/Belle/belle_20.png" alt="Belle yawning">
+            <img class="cat" src="Assets/Belle/belle_15.png" alt="Belle sleeping snuggly">
+            <img class="cat" src="Assets/Belle/belle_06.png" alt="Belle sitting around looking pretentious">
+            <img class="cat" src="Assets/Belle/belle_17.png" alt="Belle posing elegantly">
+            <br>
+            <br>
+        </div>
     </div>
   </body>
 </html>
