--- a/index.html
+++ b/index.html
@@ -5,50 +5,44 @@
     <title>Bug's Stuff</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <link rel="icon" href="/Assets/breadbug.ico">
+    <link rel="icon" href="Assets/breadbug.ico">
   </head>
   <body>
-    
-    <div class="main">
-        <div class="nav">
-            <img id="breadbug"
-                    src="Assets/breadbug spin 2.gif" 
-                    alt="Digital render of a breadbug spinning">
-            <div class="paragraph">
-                <p class="link_list" id="header_list">
-                    [ <a href="index.html">Home</a> ]<br>
-                    [ <a href="games.html">Games</a> ]<br>
-                    [ <a href="cat.html">Cat</a> ]<br>
-                    [ <a href="notes.html">Notes</a> ]<br>
-                    --- <br>
-                    <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
-                    <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
-                    <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a><br>
-                </p>
-            </div>
+    <div class="nav">
+        <img id="breadbug"
+                src="Assets/breadbug spin 2.gif" 
+                alt="Digital render of a breadbug spinning">
+        <div class="link_button">
+            <a href="index.html">Home</a>
         </div>
-        <div class="content">
-            <div class="header">
-                <img class="breadbug2" src="Assets/breadbug spin 2 small.gif"  alt="Digital render of a breadbug spinning">
-                <h1>BUG'S STUFF</h1>
-                <img class="breadbug2" src="Assets/breadbug spin 2 small.gif"  alt="Digital render of a breadbug spinning">
-            </div>
-            <div class="paragraph">
-                <p>
-                    Hi, I'm GeneralBug and this is my cool website for my cool stuff. 
-                    I'm a programmer and game developer from Australia. 
-                    I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
-                    I also dabble in other areas, like game modding and art stuff.
-                    I like cats and not writing about myself.
-                </p>
-                <img id="breadbug3" src="Assets/giant breadbug spin.gif" alt="Digital render of a giant breadbug spinning">
-            </div>
+        <div class="link_button">
+            <a href="games.html">Games</a>
         </div>
-        <div class="nav_offset"></div>
+        <div class="link_button">
+            <a href="cat.html">Cat</a>
+        </div>
+        <div class="link_button">
+            <a href="notes.html">Notes</a>
+        </div>
+        <div class="link_button">
+            <a href="links.html">Links</a>
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="header">
+            <h1>BUG'S STUFF</h1>
+        </div>
+        <div class="paragraph">
+            <p>
+                Hi, I'm GeneralBug and this is my cool website for my cool stuff. 
+                I'm a programmer and game developer from Australia. 
+                I mostly work in Unity and Godot, but I've got experience with lots of different languages and tools.
+                I also dabble in other areas, like game modding and art stuff.
+                I like cats and not writing about myself.
+            </p>
+            <img id="breadbug3" src="Assets/giant breadbug spin.gif" alt="Digital render of a giant breadbug spinning">
+        </div>
     </div>
   </body>
-  
-    <!-- steam and modrinth if i put enough stuff to justify adding links
-    <a href="https://steamcommunity.com/profiles/76561198163788245/myworkshopfiles"><img class="link_icon" src="Assets/Logos/logo_steam.png" alt="Steam Workshop"></a>
-    <a href="https://modrinth.com/user/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_modrinth.png" alt="Modrinth"></a> -->
 </html>
