--- a/games.html
+++ b/games.html
@@ -8,104 +8,97 @@
     <link rel="icon" href="Assets/breadbug.ico">
   </head>
   <body>
-    <div class="main">
-                <div class="nav">
-            <img id="breadbug"
-                    src="Assets/breadbug spin 2.gif" 
-                    alt="Digital render of a breadbug spinning">
-            <div class="paragraph">
-                <p class="link_list" id="header_list">
-                    [ <a href="index.html">Home</a> ]<br>
-                    [ <a href="games.html">Games</a> ]<br>
-                    [ <a href="cat.html">Cat</a> ]<br>
-                    [ <a href="notes.html">Notes</a> ]<br>
-                    --- <br>
-                    <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
-                    <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
-                    <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a><br>
-                </p>
+    <div class="nav">
+        <img id="breadbug"
+                src="Assets/breadbug spin 2.gif" 
+                alt="Digital render of a breadbug spinning">
+        <div class="link_button">
+            <a href="index.html">Home</a>
+        </div>
+        <div class="link_button">
+            <a href="games.html">Games</a>
+        </div>
+        <div class="link_button">
+            <a href="cat.html">Cat</a>
+        </div>
+        <div class="link_button">
+            <a href="notes.html">Notes</a>
+        </div>
+        <div class="link_button">
+            <a href="links.html">Links</a>
+        </div>
+    </div>
+    <div class="content">
+        <div class="header">
+            <h1>MY GAMES</h1>
+        </div>
+        <div class="paragraph">
+            <p class="game">
+                Here's the games I've worked on. Some of them are more experiments with using different tools or design ideas, and aren't really "fun" or "playable". Some of the games listed here are on my Itch page, which is linked on the home page. Feel free to try those out.
+            </p>
+        </div>
+        <div class="paragraph">
+            <h3>
+                Stel (2020)
+            </h3>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_Stel.png" alt="A screenshot of Stel, featuring the titular character riding a magic sled through a snowy landscape.">
+            <p class="game">
+                My friends and I's university capstone project, which was featured in the ACMI+RMIT 2020 Audience Lab. You play as a boy trying to find a cure for his fathers illness, so you have to go through a series of trials. I worked mostly on the UI, inventory and interaction systems, as well as miscellaneous other bits like the sled. Full credits can be found on the Itch page.
+            </p>
+            <div class="link_button2">
+                <a href="https://pleasureelf.itch.io/stel">Itch</a>
             </div>
         </div>
-        <div class="content">
-            <div class="paragraph">
-                <p class="game">
-                    Here's the games I've worked on. Some of them are more experiments with using different tools or design ideas, and aren't really "fun" or "playable". Some of the games listed here are on my Itch page, which is linked on the home page. Feel free to try those out.
-                </p>
-            </div>
-            <div class="paragraph">
-                <h3>
-                    Stel (2020)
-                </h3>
-                <img class="screenshot" src="Assets/Screenshots/screenshot_Stel.png" alt="A screenshot of Stel, featuring the titular character riding a magic sled through a snowy landscape.">
-                <p class="game">
-                    My friends and I's university capstone project, which was featured in the ACMI+RMIT 2020 Audience Lab. You play as a boy trying to find a cure for his fathers illness, so you have to go through a series of trials. I worked mostly on the UI, inventory and interaction systems, as well as miscellaneous other bits like the sled. Full credits can be found on the Itch page.
-                    <br>
-                </p>
-                <p class="link_list">
-                    [ <a href="https://pleasureelf.itch.io/stel">Itch (download)</a> ]
-                    <br>
-                </p>
-            </div>
-            <div class="paragraph">
-                <h3>Tale of Bear² (2020)</h3>
-                <img class="screenshot" src="Assets/Screenshots/screenshot_BearBear.png" alt="A screenshot of Tale of BearBear, featuring a teddy bear in a combat encounter with a green slime.">
-                <p class="game">
-                    Another project for uni my friend Artemis and I worked on, it's a turn-based RPG where you play as a teddy bear doing quests for other plushies. I worked mostly on the combat system. Also it's pronounced "Bear Bear".                <br>
-                    <br>
-                </p>
-                <p class="link_list">
-                    <br>
-                </p>
-            </div>
-            <div class="paragraph">
-                <h3>Steering Not Included (2018)</h3>
-                <img class="screenshot" src="Assets/Screenshots/screenshot_Steering.png" alt="A screenshot of Steering Not Included, featuring two small spinning turret-satellite things in space shooting eachother.">
-                <p class="game">
-                    A game made for a university jam, where the requirement was minimum controls. It's an arcade-y "Asteroids" inspired game where each player has one "fire" button for their little spinning turret thing, which also gives it momentum. The goal is to be the last one standing.
-                    <br>
-                </p>
-                <p class="link_list">
-                    [ <a href="https://generalbug.itch.io/steering-not-included">Itch (browser)</a> ]
-                    <br>
-                </p>
-            </div>
-            <div class="paragraph">
-                <h3>Tooth Fish (2022)</h3>
-                <img class="screenshot" src="Assets/Screenshots/screenshot_Fish.png" alt="A screenshot of Tooth Fish, featuring an underwater scene of rocks and sand and a spooky fish in the corner.">
-                <p class="game">
-                    Made for 7dfps 2022, you play as a diver hunting mutant fish with a harpoon gun. We intended to add two more large fish and audio, but haven't gotten around to it as of writing. My first attempt at using Godot, too!
-                    <br>
-                </p>
-                <p class="link_list">
-                    [ <a href="https://generalbug.itch.io/tooth-fish">Itch (download)</a> ]
-                    <br>
-                </p>
-            </div>
-            <div class="paragraph">
-                <h3>Torch Ball Prototype (2021)</h3>
-                <img class="screenshot" src="Assets/Screenshots/screenshot_Ball.png" alt="A screenshot of Torch Ball, featuring a ball with a lit brazier beside a standing torch in a snowy ruin.">
-                <p class="game">
-                    A Unity experiment mostly about modeling and music stuff. It's a <em>"puzzle"</em> game where you light torches with their corresponding fire colour.
-                    <br>
-                </p>
-                <p class="link_list">
-                    [ <a href="https://generalbug.itch.io/torch-ball-prototype">Itch (browser)</a> ]
-                    <br>
-                </p>
-            </div>
-            <div class="paragraph">
-                <h3>Flicker (2018)</h3>
-                <img class="screenshot" src="Assets/Screenshots/screenshot_Flicker.png" alt="A screenshot of Flicker, featuring a dark environment illuminated by a small fire sprite in the centre, a child in yellow, and two spooky ghosts.">
-                <p class="game">
-                    My first attempt at a game jam (Extra Jam 2018), prompt "present". You play as a little fire sprite and have to lead a kid to the exit while avoiding ghosts and collecting fuel to maintain your brightness (which the ghosts can't enter). Bad enough that I delisted it, but I'm planning to remake it soon.
-                    <br>
-                </p>
-                <p class="link_list">
-                    <br>
-                </p>
+        <div class="paragraph">
+            <h3>Tale of Bear² (2020)</h3>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_BearBear.png" alt="A screenshot of Tale of BearBear, featuring a teddy bear in a combat encounter with a green slime.">
+            <p class="game">
+                Another project for uni my friend Artemis and I worked on, it's a turn-based RPG where you play as a teddy bear doing quests for other plushies. I worked mostly on the combat system. Also it's pronounced "Bear Bear".
+                <br>
+            </p>
+        </div>
+        <div class="paragraph">
+            <h3>Steering Not Included (2018)</h3>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_Steering.png" alt="A screenshot of Steering Not Included, featuring two small spinning turret-satellite things in space shooting eachother.">
+            <p class="game">
+                A game made for a university jam, where the requirement was minimum controls. It's an arcade-y "Asteroids" inspired game where each player has one "fire" button for their little spinning turret thing, which also gives it momentum. The goal is to be the last one standing.
+                <br>
+            </p>
+            <div class="link_button2">
+                <a href="https://generalbug.itch.io/steering-not-included">Itch (browser)</a>
+
             </div>
         </div>
-        <div class="nav_offset"></div>
+        <div class="paragraph">
+            <h3>Tooth Fish (2022)</h3>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_Fish.png" alt="A screenshot of Tooth Fish, featuring an underwater scene of rocks and sand and a spooky fish in the corner.">
+            <p class="game">
+                Made for 7dfps 2022, you play as a diver hunting mutant fish with a harpoon gun. We intended to add two more large fish and audio, but haven't gotten around to it as of writing. My first attempt at using Godot, too!
+                <br>
+            </p>
+            <div class="link_button2">
+                <a href="https://generalbug.itch.io/tooth-fish">Itch</a>
+            </div>
+        </div>
+        <div class="paragraph">
+            <h3>Torch Ball Prototype (2021)</h3>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_Ball.png" alt="A screenshot of Torch Ball, featuring a ball with a lit brazier beside a standing torch in a snowy ruin.">
+            <p class="game">
+                A Unity experiment mostly about modeling and music stuff. It's a <em>"puzzle"</em> game where you light torches with their corresponding fire colour.
+                <br>
+            </p>
+            <div class="link_button2">
+                <a href="https://generalbug.itch.io/torch-ball-prototype">Itch (browser)</a>
+            </div>
+        </div>
+        <div class="paragraph">
+            <h3>Flicker (2018)</h3>
+            <img class="screenshot" src="Assets/Screenshots/screenshot_Flicker.png" alt="A screenshot of Flicker, featuring a dark environment illuminated by a small fire sprite in the centre, a child in yellow, and two spooky ghosts.">
+            <p class="game">
+                My first attempt at a game jam (Extra Jam 2018), prompt "present". You play as a little fire sprite and have to lead a kid to the exit while avoiding ghosts and collecting fuel to maintain your brightness (which the ghosts can't enter). Bad enough that I delisted it, but I'm planning to remake it soon.
+                <br>
+            </p>
+        </div>
     </div>
   </body>
 </html>
