--- a/notes.html
+++ b/notes.html
@@ -9,41 +9,41 @@
     <script src="jquery-3.7.1.min.js"></script>
   </head>  
   <body>
-    <div class="main">
-                <div class="nav">
-            <img id="breadbug"
-                    src="Assets/breadbug spin 2.gif" 
-                    alt="Digital render of a breadbug spinning">
-            <div class="paragraph">
-                <p class="link_list" id="header_list">
-                    [ <a href="index.html">Home</a> ]<br>
-                    [ <a href="games.html">Games</a> ]<br>
-                    [ <a href="cat.html">Cat</a> ]<br>
-                    [ <a href="notes.html">Notes</a> ]<br>
-                    --- <br>
-                    <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
-                    <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
-                    <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a><br>
-                </p>
-            </div>
+    <div class="nav">
+        <img id="breadbug"
+                src="Assets/breadbug spin 2.gif" 
+                alt="Digital render of a breadbug spinning">
+        <div class="link_button">
+            <a href="index.html">Home</a>
         </div>
-        <div class="content">
-            <div class="paragraph">
-                <p>
-                    As an exercise intended to improve my own design abilities by analysing other games, I started writing these little "review" things when I play a game (though I don't want them to be reviews, some get more "review-y" than others). They aren't really meant for others, so some of them are very rambly and possibly incomprehensible, so read them at your own risk.
-                    <br>
-                    <br>
-                    Also they're listed with the system I played it on and my general feelings about it (positive/negative). I only started dating them in April 2023, but the earliest are from about 2020, if I remember correctly.              
-                    <br>
-                    <br>
-                    <button id="sort_button" onclick="sortList()"></button>
-                </p>
-            </div>
-            <ol id = "notes_list">
-                
-            </ol>
+        <div class="link_button">
+            <a href="games.html">Games</a>
         </div>
-        <div class="nav_offset"></div>
+        <div class="link_button">
+            <a href="cat.html">Cat</a>
+        </div>
+        <div class="link_button">
+            <a href="notes.html">Notes</a>
+        </div>
+        <div class="link_button">
+            <a href="links.html">Links</a>
+        </div>
+    </div>
+    <div class="content">
+        <div class="paragraph">
+            <p>
+                As an exercise intended to improve my own design abilities by analysing other games, I started writing these little "review" things when I play a game (though I don't want them to be reviews, some get more "review-y" than others). They aren't really meant for others, so some of them are very rambly and possibly incomprehensible, so read them at your own risk.
+                <br>
+                <br>
+                Also they're listed with the system I played it on and my general feelings about it (positive/negative). I only started dating them in April 2023, but the earliest are from about 2020, if I remember correctly.              
+                <br>
+                <br>
+                <button id="sort_button" onclick="sortList()"></button>
+            </p>
+        </div>
+        <ol id = "notes_list">
+            
+        </ol>
     </div>
 </body>
   
