--- a/notes.html
+++ b/notes.html
@@ -38,6 +38,8 @@
                 Also they're listed with the system I played it on and my general feelings about it (positive/negative). I only started dating them in April 2023, but the earliest are from about 2020, if I remember correctly.              
                 <br>
                 <br>
+                ALSO this page uses JavaScript to load everything in from a json file, in case it's blank.
+                <br><br>
                 <button id="sort_button" onclick="sortList()"></button>
             </p>
         </div>
