--- a/links.html
+++ b/links.html
@@ -36,19 +36,67 @@
         My stuff<br>
         <a rel="me" href="https://mastodon.gamedev.place/@GeneralBug"><img class="link_icon" src="Assets/Logos/logo_mastodon.png" alt="Mastodon"></a>
         <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
-        <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a><br>
+        <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a>
+        <a href="https://modrinth.com/user/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_modrinth.png" alt="Modrinth"></a><br>
       </div>
       <div class="header">
           <h1>FRIEND'S STUFF</h1>
       </div>
-      <div class="paragraph">todo</div>
+      <div class="paragraph left_justified">
+        Stuff made by my friends and stuff!<br><br>
+        <a href="https://rozetta-stone.neocities.org/">Rozetta Stone Emporium</a> - Roze writes stuff
+        <br><br>
+
+      </div>
               <div class="header">
           <h1>OTHER STUFF</h1>
       </div>
-      <div class="paragraph">todo</div>
+      <div class="paragraph left_justified">
+          A big list of stuff I thought was cool, some of which might be useful to you!<br><br>
+
+
+          <a href="https://pf2m.com/tools/mii/">Mii Renderer</a> - Lets you export high quality renders of Miis
+          <br><br>
+          <a href="https://www.steamgriddb.com/">SteamGridDB</a> - huge database of images for filling out the thumbnails for non-Steam games or replacing existing ones
+          <br><br>
+          <a href="https://github.com/libretro-thumbnails">libretro-thumbnails</a> - big database of images meant for use with RetroArch, includes title screens, box art and gameplay screenshots for thousands of games
+          <br><br>
+          <a href="https://paletton.com/">Paletton</a> - tool for generating colour palettes 
+          <br><br>
+          <a href="https://quixel.com/megascans/free">Quixel Megascans</a> - big library of detailed 3D models and textures which are free to use with Unreal Engine, and I think you can use them elsewhere with a license
+          <br><br>
+          <a href="https://ncase.me/anxiety/">Adventures With Anxiety!</a> - little thingy about anxiety by <a href="https://ncase.me/">Nicky Case</a> 
+          <br><br>
+          <a href="https://classic.minecraft.net">Minecraft Classic</a> - official classic browser version of Minecraft rereleased for the 10th aniversery
+          <br><br>
+          <a href="https://plink.in/">Plink!</a> - weird little music thing
+          <br><br>
+          <a href="https://dood.al/pinktrombone/">Pink Trombone</a> - simulation of the mouth and nasal cavity for sound production
+          <br><br>
+          <a href="https://coolgifs.neocities.org/">The web site of cool gifs</a>
+          <br><br>
+          Console hacking guides:
+          <ul>
+            <li><a href="https://3ds.hacks.guide/">3DS</a> (It's pretty easy you know)</li>
+            <li><a href="https://wiiu.hacks.guide/">Wii U</a></li>
+            <li><a href="https://wii.hacks.guide/">Wii</a></li>
+          </ul>
+          Randomiser mods:
+          <ul>
+            <li><a href="https://ootrandomizer.com/generator">Ocarina of Time Randomiser</a></li>
+            <li><a href="https://github.com/ZoeyZolotova/mm-rando">Majora's Mask Randomiser</a> - unlike OOT, this doesn't have a web app thing, just a download </li>
+            <li><a href="https://ootmm.com/">OOT - MM Combined Randomiser</a></li>
+            <li><a href="https://archipelago.gg/">Archipelago</a> - cross-game "multiworld" randomiser, intended for multiple players across several games
+          </ul>
+          <a href="https://github.com/Admentus64/Patcher64Plus-Tool">Patcher64+</a> - tool used for N64 modding, such as OOT/MM redux patches
+          <br><br>
+          <a href="https://modloader64.com/index.html">ModLoader64</a> - exactly what it sounds like. It's mostly used for multiplayer mods of some N64 games
+          <br><br>
+
+      </div>
     </div>
   </body>
       <!-- steam and modrinth if i put enough stuff to justify adding links
     <a href="https://steamcommunity.com/profiles/76561198163788245/myworkshopfiles"><img class="link_icon" src="Assets/Logos/logo_steam.png" alt="Steam Workshop"></a>
-    <a href="https://modrinth.com/user/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_modrinth.png" alt="Modrinth"></a> -->
+     -->
 </html>
