--- a/links.html
+++ b/links.html
@@ -46,7 +46,9 @@
         Stuff made by my friends and stuff!<br><br>
         <a href="https://rozetta-stone.neocities.org/">Rozetta Stone Emporium</a> - Roze writes stuff
         <br><br>
-
+        <a href="https://emmabond02.wixsite.com/portfolio">Emma's Portfolio</a> - Emma draws stuff
+        <br><br>
+        <a href="https://benclark03.myportfolio.com/">Ben's Portfolio</a> - Ben animates stuff
       </div>
               <div class="header">
           <h1>OTHER STUFF</h1>
