Added Open Graph stuff

--- a/not_found.html
+++ b/not_found.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://buggus.neocities.org/Assets/emma_breadbug_picture.png"/>
+    <meta property="og:description" content="Bug's cool website of cool stuff"/>
     <title>Bug's Stuff</title>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
