--- a/cat.html
+++ b/cat.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Bug's Cat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://buggus.neocities.org/Assets/emma_breadbug_picture.png"/>
+    <meta property="og:description" content="Bug's cool website of cool stuff"/>
     <link href="style.css" rel="stylesheet">
     <link rel="icon" href="Assets/breadbug.ico">
   </head>
