more notes and gifcities

--- a/links.html
+++ b/links.html
@@ -79,6 +79,8 @@
           <br><br>
           <a href="https://coolgifs.neocities.org/">The web site of cool gifs</a>
           <br><br>
+          <a href="https://gifcities.org/">GifCities</a> - search the Internet Archive for gifs!
+          <br><br>
           Console hacking guides:
           <ul>
             <li><a href="https://3ds.hacks.guide/">3DS</a> (It's pretty easy you know)</li>
