--- a/links.html
+++ b/links.html
@@ -81,6 +81,10 @@
           <br><br>
           <a href="https://gifcities.org/">GifCities</a> - search the Internet Archive for gifs!
           <br><br>
+          <a href="https://bongo.cat/">Bongo Cat</a> - little music thingy with cat and stuff
+          <br><br>
+          <a href="https://freesewing.org/">FreeSewing</a> - repository of free sewing patterns and a tool to customise them based on your measurements
+          <br><br>
           Console hacking guides:
           <ul>
             <li><a href="https://3ds.hacks.guide/">3DS</a> (It's pretty easy you know)</li>
