--- a/links.html
+++ b/links.html
@@ -29,7 +29,11 @@
       <div class="link_button">
           <a href="links.html">Links</a>
       </div>
+      <p>
+          Last updated <span id="updatedate"></span>, with <span id="viewcount"></span> unique visitors!
+      </p>
     </div>
+    
     <div class="content">
       <div class="header">
           <h1>MY STUFF</h1>
@@ -105,6 +109,23 @@
 
       </div>
     </div>
+    <script>
+      // Visit count, https://dannarchy.com/tut/tut_002
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() 
+      {
+          if (this.readyState == 4 && this.status == 200) 
+          {
+              var site_data = JSON.parse(this.responseText);
+              document.getElementById("viewcount").innerHTML = site_data.info.views;
+
+              var date = site_data.info.last_updated;
+              document.getElementById("updatedate").innerHTML = date.substring(4,16);
+          }
+      };
+      xhttp.open("GET", "https://weirdscifi.ratiosemper.com/neocities.php?sitename=buggus", true);
+      xhttp.send();
+    </script>
   </body>
       <!-- steam and modrinth if i put enough stuff to justify adding links
     <a href="https://steamcommunity.com/profiles/76561198163788245/myworkshopfiles"><img class="link_icon" src="Assets/Logos/logo_steam.png" alt="Steam Workshop"></a>
