added spinning pikmin and mobile warning, shuffled around view count

--- a/games.html
+++ b/games.html
@@ -29,9 +29,6 @@
         <div class="link_button">
             <a href="links.html">Links</a>
         </div>
-        <p>
-            Last updated <span id="updatedate"></span>, with <span id="viewcount"></span> unique visitors!
-        </p>
     </div>
     
     <div class="content">
@@ -106,20 +103,6 @@
             </p>
         </div>
     </div>
-    <script>
-        // Visit count, https://dannarchy.com/tut/tut_002
-        var xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function() 
-        {
-            if (this.readyState == 4 && this.status == 200) 
-            {
-                var site_data = JSON.parse(this.responseText);
-                document.getElementById("viewcount").innerHTML = site_data.info.views;
-                document.getElementById("updatedate").innerHTML = new Date(site_data.info.last_updated).toLocaleDateString();
-            }
-        };
-        xhttp.open("GET", "https://weirdscifi.ratiosemper.com/neocities.php?sitename=buggus", true);
-        xhttp.send();
-    </script>
+    <div id="mobile_warning"><h2>This site works best on desktop!</h2></div>
   </body>
 </html>
