--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
         <div class="link_button">
             <a href="links.html">Links</a>
         </div>
-        <p>
-            Last updated <span id="updatedate"></span>, with <span id="viewcount"></span> unique visitors!
-        </p>
     </div>
 
     <div class="content">
@@ -46,9 +43,24 @@
                 I also dabble in other areas, like game modding and art stuff.
                 I like cats and not writing about myself.
             </p>
-            <img id="breadbug3" src="Assets/giant breadbug spin.gif" alt="Digital render of a giant breadbug spinning">
+            <div class="paragraph_row">
+                <img id="pikmin_gif"
+                    src="Assets/Gifs/Red_Pikmin.gif" 
+                    alt="Digital render of a breadbug spinning">
+                <img id="pikmin_gif"
+                    src="Assets/Gifs/Yellow_Pikmin.gif" 
+                    alt="Digital render of a breadbug spinning">
+                <img id="pikmin_gif"
+                    src="Assets/Gifs/Blue_Pikmin.gif" 
+                    alt="Digital render of a breadbug spinning">
+            </div>
+            <p>
+                Site last updated <span id="updatedate"></span>, with <span id="viewcount"></span> unique visitors!
+            </p>
+            <a href="https://neocities.org"><img src="Assets/neocities.png" alt="Hosted by Neocites"></a>
         </div>
     </div>
+    <div id="mobile_warning"><h2>This site works best on desktop!</h2></div>
     <script>
         // Visit count, https://dannarchy.com/tut/tut_002
         var xhttp = new XMLHttpRequest();
